# TapeCalc

./: .eslintrc.cjs  .gitattributes  .gitignore  AGENTS-LITE.md  AGENTS.md  API_CONTRACTS.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  PRD.md  PRODUCT_BRIEF.md  README.md  clippy.txt  clippy_err.txt  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.agent/: instructions.md
.agent/benchmarks/: spawn-agent-benchmark.md
.agent/roles/: @ba.md  @biz.md  @designer.md  @dev.md  @devops.md  @pm-extended.md  @pm.md  @qc.md  @sa.md  @user-tester.md  @whitehat-hacker.md
.agent/rules/: agent-behavior.md  anti-patterns.md  autonomous-tooling.md  code-standards.md  confidence-routing.md  git-hygiene.md  model-routing.md  process-gates.md  task-complexity-classifier.md  template-validation.md  timeout-escalation.md
.agent/skills/: agent-cli-compatibility.md  amateur-proof-plans.md  analytics-tracking.md  architecture-decision-records.md  brand-strategy.md  competitive-landscape.md  conflict-resolver.md  content-marketing.md  content-strategy.md  context-juggler.md  context-optimization.md  customer-acquisition.md  documentation-style-guide.md  facilitation.md  financial-modeling.md  growth-metrics.md  incident-responder.md  market-sizing.md  model-selector.md  monetization-strategy.md  multi-worker-coordination.md  observability-engineer.md  orchestrator-delegation-guide.md  partnership-development.md  playwright-testing.md  postmortem-writing.md  research-analysis.md  seo-copywriting.md  sequential-thinking.md  skill-bundles.md  slo-implementation.md  structured-analysis-frameworks.md  systematic-debugging.md  task-decomposition.md  task-router.md  technical-writing.md  telemetry-analysis.md  user-feedback-loop.md  verification-before-completion.md  worker-delegate.md  (+2 more)
.agent/spawn_agent_tasks/: upstream-pr-prep.md  worker-a-calculator-panel.md  worker-a-graph-fixes.md  worker-b-settings-view.md  worker-b-usecalculator-dry-enums.md  worker-c-currency-view.md  worker-c-remove-safeeval-fix-any.md  worker-d-button-feedback-css.md  worker-e-settings-cleanup.md
.agent/workflows/: api-design.md  audit-and-deploy.md  business-review.md  close-phase.md  competitive-response.md  customer-feedback-loop.md  ddd-discovery.md  delegate-task.md  dependency-upgrade.md  feature-review.md  framework-lint.md  go-to-market.md  hc-sdlc.md  incident-response.md  market-research.md  mobile-readiness.md  onboard-developer.md  performance-audit.md  prep-pitch-deck.md  pricing-experiment.md  product-discovery.md  release-checklist.md  retrospective.md  scale-readiness.md  swarm-execute.md  user-test-session.md  ux-audit.md
.github/workflows/: ci.yml
crates/core/: Cargo.toml
crates/core/src/: lib.rs  tape.rs  types.rs  undo.rs
crates/engine-currency/: Cargo.toml
crates/engine-currency/src/: lib.rs
crates/engine-numeric/: Cargo.toml
crates/engine-units/: Cargo.toml
crates/export/: Cargo.toml
crates/export/src/: lib.rs
crates/graphing/: Cargo.toml
crates/parser/: Cargo.toml
crates/parser/src/: ast.rs  eval.rs  lexer.rs  lib.rs
crates/wasm-bindings/: Cargo.toml
crates/wasm-bindings/src/: lib.rs
docs/: architecture.md  development.md  features.md
docs/biz/: PRD.md  PRODUCT_BRIEF.md
docs/tech/: API_CONTRACTS.md  ARCHITECTURE.md  DEPLOYMENT.md  TEST_PLAN.md
references/: migration-map.md
skills/architecture-design/: SKILL.md
skills/debugging-forensics/: SKILL.md
skills/product-docs/: SKILL.md
src/: App.tsx  index.css  main.tsx  tauriMock.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/commands/: calc.rs  conversion.rs  graphing.rs  helpers.rs  mod.rs  state.rs  tape.rs  types.rs
src/api/: index.test.ts  index.ts
src/components/: CalculatorPanel.tsx  ConfirmDialog.tsx  CurrencyView.tsx  CustomSelect.tsx  ErrorBoundary.tsx  (+8 more)
templates/: code-review-report.md  implementation-plan.md  task-brief.md
workflows/: code-review.md  debug-issue.md  delegate-implementation.md  delegate-research.md  implementation-review.md  plan-feature.md  subagent-integration-checklist.md
(+31 files in other folders)
