[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/parser",
    "crates/engine-numeric",
    "crates/engine-units",
    "crates/engine-currency",
    "crates/graphing",
    "crates/export",
    "src-tauri", "crates/wasm-bindings",
]

[workspace.package]
version = "2.0.0"
edition = "2024"
license = "MIT"
authors = ["HeoCop"]

[workspace.dependencies]
# App shell
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Testing
pretty_assertions = "1"
