[package]
name = "hc-tapcalc-engine-currency"
description = "Currency conversion engine with API, cache, and offline fallback"
version.workspace = true
edition.workspace = true

[dependencies]
hc-tapcalc-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
