[package]
name = "wasm-bindings"
description = "WebAssembly bindings for TapeCalc core logic"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

hc-tapcalc-core = { path = "../core" }
hc-tapcalc-parser = { path = "../parser" }
hc-tapcalc-engine-numeric = { path = "../engine-numeric" }
hc-tapcalc-engine-units = { path = "../engine-units" }
hc-tapcalc-engine-currency = { path = "../engine-currency" }
hc-tapcalc-graphing = { path = "../graphing" }
hc-tapcalc-export = { path = "../export" }
wasm-bindgen-futures = "0.4.64"
console_error_panic_hook = "0.1.7"

[features]
default = []
